tests/post_inference_implicit_instantiation/post_inference_implicit_instantiation.exp
Error ------------------------------------------------------------------------------------------- contextual_ctor.js:5:9

`T` is underconstrained by new `C` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   contextual_ctor.js:5:9
   5| let x = new C(); // Error
              ^^^^^^^ [1]

References:
   contextual_ctor.js:3:9
   3| class C<T> {}
              ^ [2]


Error -------------------------------------------------------------------------------------------- contextual_jsx.js:6:9

`T` is underconstrained by `Component` element [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   contextual_jsx.js:6:9
   6| let x = <Component />; // Error
              ^^^^^^^^^^^^^ [1]

References:
   contextual_jsx.js:4:20
   4| function Component<T>(props: {foo?: T}): React.Node { return null; }
                         ^ [2]


Error ------------------------------------------------------------------------ underconstrained_class_constructor.js:5:1

`T` is underconstrained by new `A` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_class_constructor.js:5:1
   5| new A(); // Error: T underconstrained
      ^^^^^^^ [1]

References:
   underconstrained_class_constructor.js:2:17
   2| declare class A<T>{
                      ^ [2]


Error --------------------------------------------------------------------------------- underconstrained_fun_call.js:3:1

`T` is underconstrained by call of `f` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_call.js:3:1
   3| f(); // Error: T underconstrained
      ^^^ [1]

References:
   underconstrained_fun_call.js:2:20
   2| declare function f<T>(): T;
                         ^ [2]


Error -------------------------------------------------------------------------------- underconstrained_fun_call.js:12:1

`T` is underconstrained by call of `i` [1] and is defined in `T` [2] [underconstrained-implicit-instantiation]

   underconstrained_fun_call.js:12:1
   12| i(); // Error: T underconstrained
       ^^^ [1]

References:
   underconstrained_fun_call.js:11:20
   11| declare function i<T>(): Array<T>;
                          ^ [2]


Error ------------------------------------------------------------------------------------ underconstrained_react.js:7:1

`T` is underconstrained by `PolyReactClass` element [1] and is defined in `T` [2]
[underconstrained-implicit-instantiation]

   underconstrained_react.js:7:1
   7| <PolyReactClass />;
      ^^^^^^^^^^^^^^^^^^ [1]

References:
   underconstrained_react.js:5:22
   5| class PolyReactClass<T> extends React.Component<{}> {}
                           ^ [2]


Error ----------------------------------------------------------------------------------- underconstrained_react.js:11:1

`T` is underconstrained by `PolyFunctionComponent` element [1] and is defined in `T` [2]
[underconstrained-implicit-instantiation]

   underconstrained_react.js:11:1
   11| <PolyFunctionComponent foo={() => {}}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   underconstrained_react.js:9:32
    9| function PolyFunctionComponent<T>(props: {foo: ({x: T} => mixed)}): React.Node { return null }
                                      ^ [2]


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:8:11

OwnProps contains a non-Type.t upper bound ObjKitT

   8| const x = HOC((x: {| foo: number, bar: number |}) => null);
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------------------- upper_non_t.js:11:1

`T` is underconstrained by call of `ReposLowerTRegressionTest` [1] and is defined in `T` [2]
[underconstrained-implicit-instantiation]

   upper_non_t.js:11:1
   11| ReposLowerTRegressionTest({}) // Error: T under constrained.
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   upper_non_t.js:10:44
   10| declare function ReposLowerTRegressionTest<T>({o?: T}): T;
                                                  ^ [2]



Found 9 errors
